<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_titlebar"
    android:elevation="@dimen/zero"
    app:elevation="@dimen/zero">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_4"
        android:background="@color/transparent"
        app:contentInsetLeft="@null"
        app:contentInsetStart="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appTitleAa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appTitleLets"
                android:textAppearance="@style/TextAppearance.LetsWatchTheme.Headline5"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tabs"
                app:layout_constraintEnd_toStartOf="@id/appTitleVekh"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appTitleVekh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AppTitleWatch"
                android:textAppearance="@style/TextAppearance.LetsWatchTheme.Headline5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/tabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/appTitleAa"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appTitleAa"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorHeight="@dimen/indicator_height"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/AppBarTabTextAppearance">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shows" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies" />

            </com.google.android.material.tabs.TabLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

</com.google.android.material.appbar.AppBarLayout>
