<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/video_details_name"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Headline6"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Body1"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/video_details_description"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Headline6"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/video_short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Body1"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/video_details_long_description"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Headline6"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/video_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Body1"
        android:textColor="@android:color/white">

    </TextView>

</LinearLayout>