<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/iconWatchList"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_marginBottom="@dimen/keyline_7"
        android:maxWidth="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/watchlist_icon"
            android:padding="@dimen/keyline_2"
            android:scaleType="fitXY"
            android:src="@drawable/ic_fluent_add_28_regular"
            app:tint="@color/white" />
    </LinearLayout>


    <TextView
        android:id="@+id/watchlistInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="@dimen/keyline_7"
        android:text="@string/add_your_favourite_movies_and_shows_to_your_watchlist"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.LetsWatchTheme.Body2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconWatchList" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/browseToWatchLaterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/browse_to_watch_later"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchlistInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>