<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/includedComponentOnlyBackTopAppBar"
        layout="@layout/component_only_back_top_app_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2">

                <TextView
                    style="@style/TextAppearance.LetsWatchTheme.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appTitleLets"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextAppearance.LetsWatchTheme.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AppTitleWatch"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.LetsWatchTheme.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:text="@string/loginscreen_explore_movies_series_and_more"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInpuLayoutemail_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/editextemail_login"
                    style="@style/TextAppearance.LetsWatchTheme.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:autofillHints="email"
                    android:background="@color/black"
                    android:hint="@string/Form_edittext_hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="#8F8585"
                    android:textCursorDrawable="@drawable/edittextcursor_white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutpass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInpuLayoutemail_login"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editextpass_login"
                    style="@style/TextAppearance.LetsWatchTheme.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:autofillHints="no"
                    android:background="@color/black"
                    android:hint="@string/Form_edittext_hint_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="#8F8585"
                    android:textCursorDrawable="@drawable/edittextcursor_white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.LetsWatchTheme.Body1"
                android:layout_width="253dp"
                android:layout_height="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_your_password"
                android:textAlignment="textStart"
                android:textColor="#CFC0C0"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutpass_login" />

            <Button
                android:id="@+id/loginButton"
                style="@style/TextAppearance.LetsWatchTheme.Subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#bd0a13"
                android:padding="11dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextAppearance.LetsWatchTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="#CFC0C0"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextAppearance.LetsWatchTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
